--- a/sass/block/_header.scss
+++ b/sass/block/_header.scss
@@ -33,6 +33,7 @@
 .btn {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 8px;
     padding: 8px;
     outline: none;
@@ -51,6 +52,8 @@
     letter-spacing: 0em;
     text-align: center;
     color: #FFFFFF;
+    width: 100%;
+    max-width: 92px;
 }
 
 .header__search {
