--- a/sass/block/_hero.scss
+++ b/sass/block/_hero.scss
@@ -43,6 +43,7 @@
     flex-direction: column;
     box-shadow: 1px 2px 4px 0px #0000001A;
     border-radius: 4px;
+    position: relative;
 
     &:hover{
         box-shadow: 4px 8px 16px 0px #FF663333;
@@ -53,10 +54,11 @@
 .product__img {
     width: 100%;
     position: relative;
+    border-radius: 4px;
+    overflow: hidden;
 
     img {
         width: 100%;
-        border-radius: 4px;
     }
 }
 
@@ -104,6 +106,10 @@
 
 .news__price{
     padding-bottom: 26px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 10px;
 }
 
 .price__text--bold {
