--- a/sass/categories/_header.scss
+++ b/sass/categories/_header.scss
@@ -15,6 +15,26 @@
     gap: 24px;
 }
 
+.btn_icons{
+    position: relative;
+
+    i{
+        position: absolute;
+    }
+}
+
+.close_icon{
+    top: -100px;
+}
+
+.openX{
+    top: 0;
+}
+
+.closeBur{
+    top: -100px;
+}
+
 .btn__link {
     font-size: 16px;
     font-weight: 700;
