--- a/sass/block/_header.scss
+++ b/sass/block/_header.scss
@@ -14,12 +14,12 @@
     gap: 10px;
 }
 
-.header__logo{
+.header__logo {
     width: 100%;
     max-width: 152px;
 }
 
-.img_table{
+.img_table {
     display: none;
 }
 
@@ -105,9 +105,134 @@
     @include flexB;
     width: 100%;
     max-width: 217px;
+    // cursor: pointer;
 }
 
-.entry__person{
+.header__modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #FCD5BACC;
+    display: none;
+    align-items: center;
+    justify-content: center;
+}
+
+.header__modal.open_modal{
+    display: flex;
+}
+
+.modal_content {
+    width: 100%;
+    max-width: 420px;
+    background-color: #fff;
+    border-radius: 4px;
+    box-shadow: 8px 16px 32px 0px #FF663333;
+}
+
+.modal_form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 32px;
+    padding: 40px 40px 40px 80px;
+}
+
+.modal__close {
+    background-color: #F3F2F1;
+    padding: 8px;
+    border-radius: 4px;
+    width: 40px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: right;
+}
+
+.modal_form__title {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    text-align: center;
+    color: $onSurface;
+}
+
+.modal_form__inp {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.number_label {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #8F8F8F;
+}
+
+#number {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
+    color: $onSurface;
+    padding: 12px 16px;
+    border-radius: 4px;
+    border: 1px solid #70C05B;
+    outline: none;
+
+    &:focus {
+        box-shadow: 4px 8px 16px 0px #70C05B33;
+    }
+
+    &::placeholder {
+        color: #8F8F8F;
+        font-size: 20px;
+        letter-spacing: 1.2px;
+    }
+}
+
+.modal__btn {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 36px;
+    color: $primary;
+    background-color: #FCD5BA;
+    padding: 16px;
+    border: none;
+    border-radius: 4px;
+}
+
+.modal__links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.modal__regist {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    text-align: center;
+    color: $secondary;
+    border: 1px solid #70C05B;
+    border-radius: 4px;
+    padding: 4px 8px;
+    max-width: 121px;
+    width: 100%;
+}
+
+.modal__pas {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    text-align: center;
+    color: $hardest;
+}
+
+.entry__person {
     @include flexB;
     gap: 10px;
 }
@@ -123,19 +248,23 @@
 // responsive part;
 
 @media screen and (max-width: 880px) {
-    .entry__person{
+    .entry__person {
         width: 40px;
     }
-    .header__entry_text{
+
+    .header__entry_text {
         display: none;
     }
-    .entry__link{
+
+    .entry__link {
         display: none;
     }
-    .img_desk{
+
+    .img_desk {
         display: none;
     }
-    .img_table{
+
+    .img_table {
         display: flex;
         align-items: center;
         justify-content: center;
@@ -143,27 +272,45 @@
         width: 49px;
     }
 }
+
 @media screen and (max-width: 768px) {
-    .btn{
+    .btn {
         padding: 10px;
     }
-    .btn__text{
+
+    .btn__text {
         display: none;
     }
 }
+
 @media screen and (max-width: 630px) {
-    .header__icons_ul{
+    .header__icons_ul {
         display: none;
     }
 }
+
 @media screen and (max-width: 410px) {
-    .btn{
+    .btn {
         display: none;
     }
-    .entry__person{
+
+    .entry__person {
         display: none;
     }
-    .header__entry{
+
+    .header__entry {
         width: 0;
+    }
+}
+
+@media screen and (max-width: 390px) {
+    .modal_form{
+        padding: 40px 20px 40px 40px;
+    }
+}
+
+@media screen and (max-width: 330px) {
+    .modal_form{
+        padding: 40px 10px 40px 20px;
     }
 }
