--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1536,7 +1536,12 @@ img {
   border: none;
   border-radius: 4px;
   padding: 16px 0;
-  margin: 0 auto;
+  margin: 15px auto;
+}
+.carusel__btn:hover {
+  background-color: #a23410;
+  -webkit-transition: all 0.6s ease;
+  transition: all 0.6s ease;
 }
 
 .carusel__btn_text {
@@ -1546,6 +1551,17 @@ img {
   width: 100%;
   max-width: 207px;
   color: #fff;
+}
+
+.data_info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.data__p {
+  width: 50%;
 }
 
 @media screen and (max-width: 780px) {
@@ -1562,4 +1578,91 @@ img {
   .carusel__text_box {
     width: 100%;
   }
+}
+.products_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 24px;
+}
+
+.product_cart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #fff;
+  border-radius: 4px;
+  padding: 8px;
+  gap: 8px;
+  width: 100%;
+  max-width: 876px;
+}
+
+.product_img {
+  width: 100px;
+  height: 80px;
+  border-radius: 4px;
+}
+
+.product_cart__desc {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 8px;
+  width: 100%;
+  max-width: 536px;
+}
+
+.product_cart__title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+}
+
+.product_cart__text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.product_cart__price {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 18px;
+}
+.product_cart__price span {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.product_cart__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #70C05B;
+  border-radius: 4px;
+  color: #fff;
+  gap: 8px;
+  font-size: 20px;
+  padding: 0 8px;
+  margin-right: 15px;
+}
+.product_cart__btn .btn {
+  color: #fff;
+  font-size: 22px;
 }/*# sourceMappingURL=main.css.map */
