--- a/sass/category/_hero.scss
+++ b/sass/category/_hero.scss
@@ -98,7 +98,12 @@ img {
     border: none;
     border-radius: 4px;
     padding: 16px 0;
-    margin: 0 auto;
+    margin: 15px auto;
+
+    &:hover{
+        background-color: #a23410;
+        transition: all .6s ease;
+    }
 }
 
 .carusel__btn_text {
@@ -108,6 +113,14 @@ img {
     width: 100%;
     max-width: 207px;
     color: #fff;
+}
+
+.data_info{
+    display: flex;
+    width: 100%;
+}
+.data__p{
+    width: 50%;
 }
 
 @media screen and (max-width: 780px) {
