--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -614,6 +614,22 @@ button {
   gap: 40px;
 }
 
+.products__none {
+  display: none;
+  grid-template-columns: repeat(4, 1fr);
+  margin-top: 40px;
+  margin-bottom: 80px;
+  gap: 40px;
+}
+
+.product {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  margin-top: 40px;
+  margin-bottom: 80px;
+  gap: 40px;
+}
+
 .product__box {
   background-color: #fff;
   display: -webkit-box;
